fixed the media query shit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="summary-card">
       <h2 class="title">Summary</h2>
-      <div>
+      <div class="list-container">
         <div class="red list">
           <img src="assets/images/icon-reaction.svg" alt="">
           <div class="list-title">Reaction</div>
